package com.nijunyang.designpatterns.bridge.api;

/**
 * @author: create by nijunyang
 * @date:2019/9/22
 */
public interface Brand {
    void call();
    void close();
}
